--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:design:28.0.0'
@@ -36,4 +36,9 @@ dependencies {
     implementation 'com.amap.api:location:latest.integration'
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.alibaba:fastjson:1.1.71.android'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
