--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation files('libs/ocr-sdk.jar')
     implementation project(':ocr_ui')
 }
