--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 
     <application
-        android:name=".Application.MyApplication"
+        android:name=".application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -41,6 +41,7 @@
         <activity android:name=".activity.Register2Activity" />
         <activity android:name=".activity.SearchPlaceActivity" />
         <activity android:name=".activity.ReimbursementActivity"/>
+        <activity android:name=".activity.RegimeActivity" />
     </application>
 
 </manifest>
