--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".activity.SearchPlaceActivity" />
         <activity android:name=".activity.ReimbursementActivity"/>
         <activity android:name=".activity.RegimeActivity" />
+        <activity android:name=".activity.SelectCarActivity" />
     </application>
 
 </manifest>
