--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".activity.ReimbursementActivity"/>
         <activity android:name=".activity.RegimeActivity" />
         <activity android:name=".activity.SelectCarActivity" />
+        <activity android:name=".activity.MyTravelsActivity" />
 
         <service android:name="com.amap.api.track.AMapTrackService" />
         <service android:name="com.amap.api.location.APSService" />
