--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.amap.api.v2.apikey"
-            android:value="366d8cb5024a7236d8a9bd439d8569b1" />
+        <meta-data android:name="com.amap.api.v2.apikey" android:value="366d8cb5024a7236d8a9bd439d8569b1"/>
 
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity android:name=".activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,6 +47,8 @@
         <activity android:name=".activity.SelectCarActivity" />
         <activity android:name=".activity.MyTravelsActivity" />
         <activity android:name=".activity.MyCarsActivity" />
+        <activity android:name=".activity.SelectCarDetailActivity" />
+
         <service android:name="com.amap.api.track.AMapTrackService" />
         <service android:name="com.amap.api.location.APSService" />
     </application>
